welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:35: error: type YELLOW is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.YELLOW)
                           ^FlowerPot:35: error: not found: value c
  setCouleurBrosse(c:Color.YELLOW)
                   ^FlowerPot:42: error: type red is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.red)
                           ^FlowerPot:42: error: not found: value c
  setCouleurBrosse(c:Color.red)
                   ^FlowerPot:47: error: type cyan is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.cyan)
                           ^FlowerPot:47: error: not found: value c
  setCouleurBrosse(c:Color.cyan)
                   ^FlowerPot:52: error: type orange is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.orange)
                           ^FlowerPot:52: error: not found: value c
  setCouleurBrosse(c:Color.orange)
                   ^FlowerPot:57: error: type pink is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.pink)
                           ^FlowerPot:57: error: not found: value c
  setCouleurBrosse(c:Color.pink)
                   ^FlowerPot:62: error: type green is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.green)
                           ^FlowerPot:62: error: not found: value c
  setCouleurBrosse(c:Color.green)
                   ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^